# system_comment

./: Dockerfile  README.md  comment.sql  docker-compose.yml  example_env  fly.toml  manage.py  pyproject.toml  requirements.txt
comment/: consumers.py  forms.py  models.py  urls.py  utils.py  views.py
comment/migrations/: 0001_initial.py  0002_alter_comment_options.py  0003_remove_comment_email.py
static/: styles.css
staticfiles/: scripts.js  styles.css
system_comment/: asgi.py  settings.py  urls.py  wsgi.py
templates/: comment.html  comment_item.html  index.html
templates/registration/: login.html  signup.html
